--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+build/
 
 # Dependency directories
 node_modules/
@@ -66,3 +66,6 @@ typings/
 #remove vs code files
 .vs/
 .vscode/
+
+# support files
+todo.MD
